samples/_failures_safe/1761626221_f3ec51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9792a50d.c: In function ‘main’:
./samples/SAFE/__tmp_9792a50d.c:153:41: error: expected ‘)’ at end of input
  153 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_9792a50d.c:153:21: error: too few arguments to function ‘print_matrix’
  153 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_9792a50d.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_9792a50d.c:153:21: error: expected declaration or statement at end of input
  153 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_9792a50d.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9792a50d.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9792a50d.c:153:21: error: expected declaration or statement at end of input
